force-app/main/default/objects/TrackIT__Work_Order_Equipment__c/fields/TrackIT__Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Equipment_Type__c</fullName>
    <label>Equipment Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>