force-app/main/default/objects/TrackIT__Work_Order_Equipment__c/fields/TrackIT__Item__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Item</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>TrackIT__Item__c.TrackIT__Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Equipment</value>
        </filterItems>
        <filterItems>
            <field>TrackIT__Item__c.TrackIT__Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Fire_Extinguisher</value>
        </filterItems>
        <filterItems>
            <field>TrackIT__Item__c.TrackIT__Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Computer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>TrackIT__Item__c</referenceTo>
    <relationshipName>Work_Order_Equipment</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>