force-app/main/default/objects/TrackIT__Work_Order_Equipment__c/fields/TrackIT__Item_Desc__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Item_Desc__c</fullName>
    <label>Item Desc</label>
    <length>80</length>
    <type>Text</type>
</CustomField>