force-app/main/default/objects/TrackIT__Work_Order_Equipment__c/fields/TrackIT__WO_Equipment_ID__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__WO_Equipment_ID__c</fullName>
    <label>WO Equipment ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>