force-app/main/default/objects/TrackIT__Work_Order_Equipment__c/fields/TrackIT__Work_Order__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Work_Order__c</fullName>
    <label>Work Order</label>
    <referenceTo>TrackIT__Work_Order__c</referenceTo>
    <relationshipName>Work_Order_Equipment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>